2012-04-30  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13942]
	* sysdeps/i386/fpu/e_acos.S (__ieee754_acos): Calculate 1 - x^2 as
	(1 - x) * (1 + x).
	* sysdeps/i386/fpu/e_acosl.c (__ieee754_acosl): Likewise.
	* sysdeps/i386/fpu/e_asin.S (__ieee754_asin): Likewise.
	* math/libm-test.inc (acos_test): Add more tests.
	(asin_test): Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

	[BZ #14034]
	* sysdeps/i386/fpu/e_acos.S (__ieee754_acos): Take absolute value
	of square root.
	* sysdeps/i386/fpu/e_acosf.S (__ieee754_acosf): Likewise.
	* sysdeps/i386/fpu/e_acosl.c (__ieee754_acosl): Likewise.
	* math/libm-test.inc (acos_test_tonearest): New function.
	(acos_test_towardzero): Likewise.
	(acos_test_downward): Likewise.
	(acos_test_upward): Likewise.
	(asin_test_tonearest): Likewise.
	(asin_test_towardzero): Likewise.
	(asin_test_downward): Likewise.
	(asin_test_upward): Likewise.
	(main): Call the new functions.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Update.

	[BZ #13884]
	[BZ #13924]
	* math/e_exp10.c: Include <float.h>.
	(__ieee754_exp10): Handle underflow here rather than multiplying
	large negative argument by M_LN10.
	* math/e_exp10f.c (__ieee754_exp10f): Call __ieee754_exp instead
	of __ieee754_expf.
	* math/e_exp10l.c: Include <float.h>.
	(__ieee754_exp10l): Handle underflow here rather than multiplying
	large negative argument by M_LN10l.
	* math/libm-test.inc (exp10_test): Add another test.  Do not allow
	spurious overflow exception on underflow.

2012-04-29  Marek Polacek  <polacek@redhat.com>

	* misc/sys/cdefs.h (__attribute_artificial__): New macro.
	(__fortify_function): New macro.
	(__extern_always_inline): Don't use __attribute__ ((__artificial__)).
	* libio/bits/stdio-ldbl.h: Use __fortify_function in place of
	__extern_always_inline.
	* libio/bits/stdio2.h: Likewise.
	* libio/bits/stdio.h: Likewise.
	* string/string.h: Likewise.